[gd_scene format=3 uid="uid://cr024x17mbepw"]

[ext_resource type="Script" uid="uid://vn01xogd2epx" path="res://mob.gd" id="1_1qmh0"]
[ext_resource type="Texture2D" uid="uid://b43a85p2ni3qk" path="res://fish pack nuovo/4/Walk.png" id="2_p11y5"]
[ext_resource type="Texture2D" uid="uid://cnjr3hm8wag77" path="res://fish pack nuovo/3/Walk.png" id="3_s5nov"]
[ext_resource type="Texture2D" uid="uid://mc8lks87qwai" path="res://fish pack nuovo/2/Walk.png" id="4_b3mxk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1qmh0"]
atlas = ExtResource("2_p11y5")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfurk"]
atlas = ExtResource("2_p11y5")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieysi"]
atlas = ExtResource("2_p11y5")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cixyi"]
atlas = ExtResource("2_p11y5")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ulmv"]
atlas = ExtResource("3_s5nov")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcqmr"]
atlas = ExtResource("3_s5nov")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbnni"]
atlas = ExtResource("3_s5nov")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yscv0"]
atlas = ExtResource("3_s5nov")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqsov"]
atlas = ExtResource("4_b3mxk")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvrms"]
atlas = ExtResource("4_b3mxk")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0ign"]
atlas = ExtResource("4_b3mxk")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ak38"]
atlas = ExtResource("4_b3mxk")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxhkm"]
atlas = ExtResource("4_b3mxk")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhy1y"]
atlas = ExtResource("4_b3mxk")
region = Rect2(240, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_yscv0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qmh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfurk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieysi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cixyi")
}],
"loop": true,
"name": &"light",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ulmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcqmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbnni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yscv0")
}],
"loop": true,
"name": &"shark",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqsov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvrms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0ign")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ak38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxhkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhy1y")
}],
"loop": true,
"name": &"tartug",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eqsov"]
radius = 20.0
height = 94.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p11y5"]
radius = 27.0
height = 126.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s5nov"]
radius = 30.0
height = 86.0

[node name="Mob" type="RigidBody2D" unique_id=226616517 groups=["mobs"]]
collision_mask = 0
gravity_scale = 0.0
script = ExtResource("1_1qmh0")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1266527889]
position = Vector2(-1.5000024, -2.0000024)
scale = Vector2(2.85, 2.635)
sprite_frames = SubResource("SpriteFrames_yscv0")
animation = &"light"

[node name="CollisionShapeTartug" type="CollisionShape2D" parent="." unique_id=1832268803]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_eqsov")

[node name="CollisionShapeShark" type="CollisionShape2D" parent="." unique_id=2092893211]
position = Vector2(-4, 0)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_p11y5")

[node name="CollisionShapeLight" type="CollisionShape2D" parent="." unique_id=1732590907]
position = Vector2(-15, 0)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_s5nov")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="." unique_id=2066447456]
